compiler/tests/en/errors/ternary_cond_bool.salam
// EXPECT: E021
func main:
    x := 1 ? 2 : 3
    println x
end
